<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_menu">М</string>
    <string name="add_button">Добавить</string>
    <string name="splash_image">Заставка</string>
    <string name="version">Версия</string>
    <string name="service_button">Сервис</string>
    <string name="time_on">Время начала</string>
    <string name="time_off">Время завершения</string>
    <string name="days_button">Дни недели</string>
    <string name="shedTitle">Задача</string>
    <string name="shed_act">Активна</string>
    <string name="save_button">Сохранить</string>
    <string name="delete_button">Удалить</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="info_icon" translatable="false">infoicon</string>
    <string name="setup_menu">Настройки</string>
    <string name="about_app">О приложении</string>
    <string name="task_list">Список задач</string>
    <string name="common_setup">Общие</string>
    <string name="confirm">Подтверждения</string>
    <string name="notify">Уведомления</string>
    <string name="active_shed">Планировщик включен</string>
    <string name="confirm_del">Подтверждать удаление</string>
    <string name="confirm_disable">Подтверждать запрет</string>
    <string name="confirm_stop">Подтверждать остановку сервиса</string>
    <string name="show_notify">Показывать уведомления</string>
    <string name="service_start">Сервис запущен</string>
    <string name="service_stop">Сервис остановлен</string>
    <string name="confirm_text">Подтверждение</string>
    <string name="confirm_service_stop">Остановить сервис?</string>
    <string name="confirm_task_stop">Запретить задачу?</string>
    <string name="confirm_task_delete">Удалить задачу?</string>
    <string name="services">Сервисы</string>
    <string name="mobile_data">Мобильные данные</string>
    <string name="bluetooth">Блютус</string>
    <string name="wifi" translatable="false">Wi-Fi</string>
    <string name="brightness">Яркость</string>
    <string name="ring">Звонок</string>
    <string name="ring_vol">Громкость звонка</string>
    <string name="notify_vol">Громкость уведомлений</string>
    <string name="time">Время</string>
    <string name="days">Дни недели</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="monday_short">Пн</string>
    <string name="tuesday_short">Вт</string>
    <string name="wednesday_short">Ср</string>
    <string name="thursday_short">Чт</string>
    <string name="friday_short">Пт</string>
    <string name="saturday_short">Сб</string>
    <string name="sunday_short">Вс</string>
    <string name="volume">Громкость</string>
    <string name="days_button2">Дни недели</string>
    <string name="min_vol">Мин</string>
    <string name="max_vol">Макс</string>
    <string name="volume_text">Громкость</string>
    <string name="on_off">Вкл/Выкл</string>
    <string name="on_text">Включено</string>
    <string name="off_text">Выключено</string>
    <string name="on_text_short">Вкл</string>
    <string name="off_text_short">Выкл</string>
    <string name="to_on_text">Включить</string>
    <string name="to_off_text">Выключить</string>
    <string name="app_name2">Планировщик задач</string>
    <string name="next_run">Следующий запуск</string>
    <string name="other">Прочее</string>
    <string name="vibro_setup">Вкл вибро при громкости 0</string>
    <string name="help_text">Вкл/выкл передачу данных, bluetooth, wifi,
        управление громкостью звонка и уведомлений</string>
    <string name="copyright" translatable="false">ALR.RAV (c)</string>
    <string name="copyright_year" translatable="false">2014-2017</string>
    <string name="notify_sound_vibro">Звук и вибрация при уведомлении</string>
    <string name="show_icon">Показывать иконку</string>
    <string name="license">Лицензия</string>
    <string name="license_text">Планировщик задач распространяется под лицензией GNU General Public License version 3</string>
    <string name="sources">Исходные тексты</string>
    <string name="source_available">Исходный код можно получить на:</string>
    <string name="backup">Резервная копия</string>
    <string name="save_backup">Сохранить</string>
    <string name="restore_backup">Восстановить</string>
    <string name="saved">Сохранено</string>
    <string name="restored">Восстановлено</string>
    <string name="backup_not_found">Резервная копия не найдена</string>
    <string name="confirm_delete_all">Очистить список задач?</string>
    <string name="notify_with_ring">Громкость звонка и уведомлений одинаковая</string>
    <string name="widget_status_on">Активен</string>
    <string name="widget_status_off">Выключен</string>
    <string name="text_do">Действие</string>
    <string name="not_saved">Не сохранено, ошибка создания пути</string>
    <string name="show_status_bar">Показывать панель статуса</string>
    <string name="confirm_task_run">Выполнить задачу сейчас?</string>
    <string name="time_now">Сейчас</string>
    <string name="refresh_log">Обновить</string>
    <string name="clear_log">Очистить</string>
    <string name="update">Обновление</string>
    <string name="downloads">Загрузка</string>
    <string name="install">Установить обновление</string>
    <string name="update_check">Обновить</string>
    <string name="vibro">Вибро</string>
    <string name="notifi_warn">Для работы программы необходимо включить уведомления</string>
</resources>
