<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/primary_dark"
        android:elevation="@dimen/elevation_high"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_menu"
            android:id="@+id/textView16"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            />
    </LinearLayout>


<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_setup"
        android:id="@+id/textView"
        android:background="@color/primary_light"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/active_shed"
            android:id="@+id/textView3"
            android:layout_weight="1.0"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shedActiveCheckBox"
            />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/textView2"
        android:background="@color/primary_light"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_del"
            android:id="@+id/textView4"
            android:layout_weight="1.0"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmDelCheckBox"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_disable"
            android:id="@+id/textView5"
            android:layout_weight="1.0"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmDisCheckBox"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify"
        android:id="@+id/textView7"
        android:background="@color/primary_light"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_icon"
            android:id="@+id/textView12"
            android:layout_weight="1.0"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showIconCheckBox"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_notify"
            android:id="@+id/textView8"
            android:layout_weight="1.0"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showNotifyCheckBox"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notify_sound_vibro"
            android:id="@+id/textView11"
            android:layout_weight="1.0"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notifySoundCheckBox"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:id="@+id/textView9"
        android:background="@color/primary_light"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/notify_with_ring"
            android:id="@+id/textView15"
            android:layout_weight="1.0"
            android:textColor="@color/primary_text"
            android:gravity="center_vertical"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notifyWithRingCheckBox"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup"
        android:id="@+id/textView13"
        android:background="@color/primary_light"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/panel"
            android:text="@string/save_backup"
            android:id="@+id/button"
            android:onClick="backupClick"
            android:background="@drawable/button_background"
            android:minWidth="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:minWidth="50dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/panel"
            android:text="@string/restore_backup"
            android:id="@+id/button2"
            android:onClick="restoreClick"
            android:background="@drawable/button_background"
            android:minWidth="100dp"/>
    </LinearLayout>
</LinearLayout>
</LinearLayout>