<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
              android:divider="@drawable/divider_horiz"
              android:showDividers="middle">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:gravity="center"
            android:background="@color/primary_dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_text"
                android:id="@+id/textView"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_vol"
                android:id="@+id/textView2"
                android:textColor="@color/primary_text"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_weight="1.0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_vol"
                android:id="@+id/textView3"
                android:textColor="@color/primary_text"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vibro_setup"
                android:id="@+id/textView4"
                android:textColor="@color/primary_text"
                android:layout_weight="1"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vibroCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:gravity="center">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="@dimen/abc_action_bar_default_height_material"
                android:text="@string/ok"
                android:id="@+id/button"
                android:onClick="volumeOkClick"
                android:background="@drawable/button_background"
                android:textColor="@color/white"/>
        </LinearLayout>
</LinearLayout>