<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/linearLayout"
        android:background="@color/primary"
        android:elevation="@dimen/elevation_high"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/app_logo"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name2"
            android:id="@+id/textView"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_weight="3"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:background="@color/white">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Copyright (C) 2015-2017 by Alex Rav"
                android:id="@+id/textView5"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="version"
                android:id="@+id/versionText"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:gravity="center"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text"
                android:id="@+id/textView2"
                android:textColor="@color/primary_text"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/license"
                android:id="@+id/textView3"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_text"
                android:id="@+id/textView4"
                android:textColor="@color/primary_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="http://opensource.org/licenses/gpl-3.0.html"
                android:id="@+id/textView9"
                android:textColor="@color/primary_text"
                android:autoLink="web"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sources"
                android:id="@+id/textView6"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source_available"
                android:id="@+id/textView7"
                android:textColor="@color/primary_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textColor="@color/primary_text"
                android:autoLink="web"
                android:text="https://bitbucket.org/alex_rav/tasks"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>