<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:divider="@drawable/divider_horiz_light"
              android:gravity="center" android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:background="@color/primary_dark"
            android:id="@+id/linearLayout"
            android:elevation="@dimen/elevation_high"
            android:gravity="center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:id="@+id/textView7"
                android:gravity="center"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:id="@+id/textView"
                android:layout_weight="1.0"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mondayCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:id="@+id/textView2"
                android:layout_weight="1.0"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tuesdayCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:id="@+id/textView3"
                android:layout_weight="1.0"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wednesdayCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:id="@+id/textView4"
                android:layout_weight="1.0"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/thursdayCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout6"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:id="@+id/textView5"
                android:layout_weight="1.0"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fridayCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout7"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:id="@+id/textView6"
                android:layout_weight="1.0"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saturdayCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/linearLayout8"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:id="@+id/textView8"
                android:layout_weight="1.0"
                android:textColor="@color/primary_text"
                android:onClick="daysOkButtonClick"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sundayCheckBox"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/linearLayout9">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="@dimen/abc_action_bar_default_height_material"
                android:text="@string/ok"
                android:id="@+id/okButton"
                android:onClick="daysOkButtonClick"
                android:background="@drawable/button_background"
                android:minHeight="@dimen/panel" android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>